src/snapshots/rint__parser__tests__div and minus.snap
---
source: src/parser.rs
expression: "format!(\"{}={} {}\", s, expected, &expr.0)"
---
9/-9=-1 (9 / -(9))
