src/snapshots/rint__parser__tests__minus and mul.snap
---
source: src/parser.rs
expression: "format!(\"{}={} {}\", s, expected, &expr.0)"
---
"-9*-9=81 (-(9) * -(9))"
