src/snapshots/rint__parser__tests__minus precedence.snap
---
source: src/parser.rs
expression: "format!(\"{}={} {}\", s, expected, &expr.0)"
---
"-1+1*2=1 (-(1) + (1 * 2))"
