src/snapshots/rint__parser__tests__mod and div precendence.snap
---
source: src/parser.rs
expression: "format!(\"{}={} {}\", s, expected, &expr.0)"
---
4%2+3/3=1 ((4 % 2) + (3 / 3))
