src/snapshots/rint__parser__tests__mul precedence.snap
---
source: src/parser.rs
expression: "format!(\"{}={} {}\", s, expected, &expr.0)"
---
1+1*2=3 (1 + (1 * 2))
