src/snapshots/rint__parser__tests__parenthesis duplication atoms.snap
---
source: src/parser.rs
expression: "format!(\"{}={} {}\", s, expected, &expr.0)"
---
((1)/(2))=0 (1 / 2)
