src/snapshots/rint__parser__tests__parenthesis duplication expr.snap
---
source: src/parser.rs
expression: "format!(\"{}={} {}\", s, expected, &expr.0)"
---
(((1+2)))*3=9 ((1 + 2) * 3)
