src/snapshots/rint__parser__tests__parenthesis duplication.snap
---
source: src/parser.rs
expression: "(format!(\"{}={}\", s, expected), expr)"
---
- ((1)/(2))=0
- Binary:
    - Num:
        Dec: "1"
    - Div
    - Num:
        Dec: "2"
