src/snapshots/rint__parser__tests__parenthesis precendence right.snap
---
source: src/parser.rs
expression: "format!(\"{}={} {}\", s, expected, &expr.0)"
---
10/(1*2)=5 (10 / (1 * 2))
