src/snapshots/rint__parser__tests__program_0.snap
---
source: src/parser.rs
expression: "format!(\"{}\", program)"
---
(program
  (fun_def bool xyz [Number y1])
  (typedef int Number)
  (fun_def bool xyz [Number y2]
    (block
      (return (> y2 2))
    ))
  (fun_def int main [Number x, bool flag]
    (block
      (declare result Number ((&& flag (> x 0)) ? x : 0))
      (if (&& (!= result 0) (call xyz 3))
        then (block
          (return result)
        )
        else (block
          (return 1)
        ))
    ))
)
